@@ -95,7 +95,6 @@
     ]
   },
   "dependencies": {
-    "@amplitude/node": "^1.8.0",
     "@babel/preset-env": "7.12.1",
     "@ngraveio/bc-ur": "https://github.com/BlueWallet/bc-ur",
     "@polkadot/api": "^5.5.1",
@@ -113,9 +112,8 @@
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
     "@remobile/react-native-qrcode-local-image": "https://github.com/BlueWallet/react-native-qrcode-local-image",
-    "@sentry/react-native": "2.6.0",
+    "@sentry/react-native": "^3.1.1",
     "aez": "1.0.1",
-    "amplitude-js": "7.4.4",
     "assert": "2.0.0",
     "base-x": "3.0.8",
     "bc-bech32": "file:blue_modules/bc-bech32",
