@@ -1,1 +1,1 @@
-"* CLean code \n* Fix update balance after send payment \n* Fix list transaction \n* Fix small display last transaction \n* Add latestTransaction \n* Update \n* Add cache \n* Updaet soon \n* Update qr \n* Update about \n* Add settings \n* Cleanup \n* Remove code \n* Cleanup \n* Add init fastlane \n* Clean code \n* add config react-native-vector-icons for android \n* Add app for android \n"
+"* Update build android \n* CLean code \n* Fix update balance after send payment \n* Fix list transaction \n* Fix small display last transaction \n* Add latestTransaction \n* Update \n* Add cache \n* Updaet soon \n* Update qr \n* Update about \n* Add settings \n* Cleanup \n* Remove code \n* Cleanup \n* Add init fastlane \n* Clean code \n* add config react-native-vector-icons for android \n* Add app for android \n"
