@@ -1,3 +1,4 @@
+* Update build android 
 * CLean code 
 * Fix update balance after send payment 
 * Fix list transaction 
